--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "author": "Eric Felder",
   "license": "MIT",
+  "engines": {
+    "node": "10.15.0",
+    "yarn": "1.13.0"
+  },
   "scripts": {
     "serve": "live-server public/",
     "build:dev": "webpack",
