--- a/package.json
+++ b/package.json
@@ -55,5 +55,6 @@
     "jest": "20.0.4",
     "react-test-renderer": "15.6.1",
     "webpack-dev-server": "2.5.1"
-  }
+  },
+  "repository": "git@github.com:PatBateman89/my-money-react-app.git"
 }
